--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/plant-selling-website
+MONGO_URI=mongodb+srv://plantshopping:greenworld@cluster0.790lbnb.mongodb.net/plant_selling_db
 PORT=5000
-JWT_SECRET=your-secret-key-plant-shop-2024
+JWT_SECRET=plant-shop-secret-2024
