--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://plantshopping:greenworld@cluster0.790lbnb.mongodb.net/plant_selling_db
-PORT=5000
+NODE_ENV=production
 JWT_SECRET=plant-shop-secret-2024
